# maigret-llm

./: README.md  pyproject.toml
maigret_llm/: __init__.py  adaptive_parser.py  agent.py  cli.py  identity_linker.py  site_maintenance.py  site_prioritizer.py  synthesis.py  username_expander.py
maigret_llm/llm/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
