[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "maigret-llm"
version = "0.1.0"
description = "Maigret + LLM: OSINT inteligente com síntese narrativa, expansão de usernames e agente autônomo"
readme = "README_MAIGRET_LLM.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = []  # All LLM SDKs are optional — install what you need

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai    = ["openai>=1.30"]
gemini    = ["google-generativeai>=0.7"]
all       = ["anthropic>=0.30", "openai>=1.30", "google-generativeai>=0.7"]

[project.scripts]
maigret-llm = "maigret_llm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["maigret_llm*"]
